--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,40 @@
 *{
     margin:20px;
-    background-color: rgb(0, 0, 30);
     color: rgb(170, 64, 64);
+    font-family: 'Arial';
 
 }
-
-a {
-    padding:20px;
-    background-color: aqua;
-    text-align: left;
+.flex-container{
+    display:flex;
+    -ms-flex-align: center;
+    text-align: center;
+    align-items: center;
+    align-self: center;
+}
+.flex-container-horizental{
+    display: flex;
+    -ms-flex-align: center;
+    flex-direction: column;
+}
+.header_logo{
+    flex:0.1;
+    height:2em;
+    margin-right:0;
+    margin-left:0;
+    align-self: left;
+}
+.item{
+    font-size:20px;
+    text-align: center;
+    flex:1;
+}
+.item-h1{
+    font-size:30px;
+    text-align: center;
+    flex:1;
+}
+.img{
+    flex: 1;
+    width: 30%;
+    align-self: center;
 }
