--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,48 @@
 *{
-    margin:20px;
-    color: rgb(170, 64, 64);
-    font-family: 'Arial';
+    /* color: rgb(170, 64, 64); */
+    font-family: 'Roboto', sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    margin:0;
+    color: rgb(179, 24, 15);
+    background-color: rgb(255, 206, 206);
+    
+}
+.header{
+    display:flex;
+    flex: 1;
+    background-color: black;
+    margin: 0;
+    padding:1%;   
+    font-weight:bold; 
+}
+.logo-container{
+    width: 5%;
+    max-width: 50px;
+    margin: 0;
+    margin-right: 5%;
+    background-color: black;
+
+
+}
+
+.header-logo{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    background-color: black;
+}
+a{
+    text-decoration: none;
+    background-color: black;
+
+}
+
+.header-a{
+    font-size:20px;
+    text-align: center;
+    text-decoration: none;
+    padding: 1%;
+    align-items: center;
+    background-color: black;
 
 }
 .flex-container{
@@ -16,18 +57,10 @@
     -ms-flex-align: center;
     flex-direction: column;
 }
-.header_logo{
-    flex:0.1;
-    height:2em;
-    margin-right:0;
-    margin-left:0;
-    align-self: left;
-}
-.item{
-    font-size:20px;
-    text-align: center;
-    flex:1;
-}
+
+
+
+
 .item-h1{
     font-size:30px;
     text-align: center;
@@ -41,8 +74,9 @@
 
 .draw-container{
     border: 1px solid black;
-    height: 600px;
-    width: 600px;
+    width: 60%;
+    max-width: 600px;
+    aspect-ratio: 1/1;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -61,7 +95,7 @@
     flex: 1;
     border:1px solid black;
     margin:0;
-    transition:0s 180s;
+    transition:0s 25000s;
 }
 .hovered:hover
 {
